# criterion

./: .gitattributes  BENCHMARKS  CHANGELOG.md  Cargo.toml  README.md  epsilon.cabal  exo.cabal
.github/workflows/: haskell.yml
advent-of-code/: LICENSE  README.md  advent-of-code.cabal  package.yaml
advent-of-code/app/: Main.hs
advent-of-code/src/Days/: Day01.hs
app/: Main.hs  main.rs
benches/: benchmark1.rs  benchmark2.rs  benchmark3.rs  benchmark4.rs  benchmark5.rs  benchmark6.rs  benchmark7.rs  benchmarks.rs
euler/: .gitignore  Cargo.toml  epsilon.cabal  run.sh
euler/app/: Main.hs  main.rs
euler/benches/: benchmark2.rs  benchmark3.rs  benchmark5.rs
euler/src/: problem1.rs  problem2.rs  problem3.rs  problem5.rs  problem6.rs
euler/src/Problems/: Problem1.hs  Problem10.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem8.hs  Problem9.hs
euler/test/Tests/: Test2.hs  Test4.hs
src/: Problems.hs  lib.rs  problem1.rs  problem2.rs  problem3.rs  problem4.rs  problem5.rs  problem6.rs  problem7.rs
src/Problems/: Pr1.hs  Problem1.hs  Problem1.md  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs  Problem8.hs  problem1.rs
test/: Tests.hs
test/Tests/: Test1.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs
