[package]
name = "epsilon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# problems library
[lib]
name = "problems"
path = "src/problems/lib.rs"
crate-type = ["lib"]

# main executable
[[bin]]
name = "main"
path = "app/main.rs"

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
num = "0.4"

# [dependencies]

[[bench]]
name = "benchmarks"
harness = false
